--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.junicavi.gtatimers">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +28,8 @@
         <activity android:name=".Second_b" />
         <activity android:name=".Third_b" />
         <activity android:name=".Fourth_b" />
-        <activity android:name=".Fifth_b"></activity>
+        <activity android:name=".Fifth_b" />
+        <activity android:name=".Login" />
     </application>
 
 </manifest>
